# cxx26-meta-funcs

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: meta_aggregate.h  meta_print.h
